--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -10,7 +10,7 @@ $darkBorderColor = $darkTextColor
 $codeBgColor = $darkTextColor
 
 $bgColor = #fff
-$headerBgColor = $bgColor;
+$headerBgColor = $bgColor
 
 $footerBgColor = $darkTextColor
 $footerColor = #828282
