--- a/styles/index.styl
+++ b/styles/index.styl
@@ -9,7 +9,7 @@
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700&display=swap")
 
-$green = #03a87c
+$green = rgb(166,134,0) //212,170,0
 $color_1 = rgba(0, 0, 0, 0.54)
 $color_2 = rgba(0, 0, 0, 0.44)
 $color_3 = rgba(0, 0, 0, 0.8)
@@ -218,8 +218,15 @@ code
 .themefooter
   background-color: rgba(0, 0, 0, 1)
   margin-top: 80px
+  display: flex 
   padding: 50px 0
   color: rgba(255, 255, 255, 0.5)
+  .contacts
+    display flex
+    justify-content: space-around
+    align-items: flex-end
+    margin-left 20rem
+    
   a
     color: #fff
     transition: all .2s
