updated stylus css

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -223,9 +223,9 @@ code
   color: rgba(255, 255, 255, 0.5)
   .contacts
     display flex
-    justify-content: space-around
+    justify-content: space-between
     align-items: flex-end
-    margin-left 20rem
+    margin-left 26rem
     
   a
     color: #fff
