fixed mobile visualization

--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -1,7 +1,7 @@
 @require './config'
 
 // narrow desktop / iPad
-// @media (max-width: $MQNarrow)
+@media (max-width: $MQNarrow)
 
 // wide mobile
 @media (max-width: $MQMobile)
