--- a/styles/index.styl
+++ b/styles/index.styl
@@ -4,7 +4,6 @@
 @require './wrapper.styl'
 @require './sw-popup.styl'
 
-
 @import '../node_modules/bootstrap-4-stylus/bootstrap.styl'
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700&display=swap")
@@ -208,8 +207,8 @@ nav
   margin:40px 0 60px
 .newsletter__title
   font-weight:700
-.newsletter .newsletter__fields
-  grid-template-columns: 2fr 1fr;
+//.newsletter .newsletter__fields
+  //grid-template-columns: 2fr 1fr;
 .lead
   color: $color_1
 code
@@ -219,12 +218,13 @@ code
   background-color: rgba(0, 0, 0, 1)
   margin-top: 80px
   display: flex 
+  align-items: center
   padding: 50px 0
   color: rgba(255, 255, 255, 0.5)
   .contacts
     display flex
     justify-content: space-between
-    align-items: flex-end
+    align-items: center
     margin-left 26rem
     
   a
