--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -1,9 +1,8 @@
 // colors
-$accentColor = lighten(#03a87c, 5%)
+$accentColor = lighten(rgb(166,134,0), 5%)
 
 $textColor = #2c3e50
 $darkTextColor = #000
-
 $borderColor = rgba($darkTextColor,.05)
 $darkBorderColor = $darkTextColor
 
