changed text title, added button to go to the app and fixed date bugs in all posts

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -242,3 +242,37 @@ code
   .logofooter
     width: 50px
 
+
+.mdButtons 
+  display: block
+  border:none
+  text-decoration: none
+  width: 15rem
+  margin: 0 auto 1.2rem auto
+  padding: 1rem 0.8rem
+  background-color: #DEB202
+  color: rgb(255,255,255)
+  text-align: center;
+  font-size: 1.2rem
+  box-shadow: 3px 5px 10px #888888
+  font-family: sans-serif
+  font-weight:  bolder
+  transition: 0.5s
+  border-radius: 15px
+  a
+    color: white
+    text-decoration: none
+  
+  &:hover, &:after, &:active
+    background-color:black
+    
+	  	
+
+
+
+    
+  
+  
+  
+
+
