changed margin in titles

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -173,7 +173,7 @@ nav
     text-decoration:none
 .article-head, .content__default
   font-family: 'Merriweather'
-  line-height:1.3
+  line-height: 1.0em
 .card-subheading.post-meta-tags a
   font-size: 16px
   background: #eee
@@ -195,7 +195,6 @@ nav
   h1, h2, h3, h4, h5, h6
     font-weight:600
     font-family:$primary_font_family
-    margin-top:1.5em
     margin-bottom:.5em
 .featuredimg
   border-radius:0px
@@ -216,11 +215,12 @@ code
   border-radius: 3px
 .themefooter
   background-color: rgba(0, 0, 0, 1)
-  margin-top: 80px
+  margin-top: 2rem
   display: flex 
   align-items: center
   text-align: center
-  padding: 50px 0
+  padding-top: 2rem 
+  padding-bottom: 1rem
   color: rgba(255, 255, 255, 0.5)
   .contacts
     display flex
@@ -265,6 +265,13 @@ code
   
   &:hover, &:after, &:active
     background-color:black
+
+#about-me, #meditation-timer-app
+  margin-top:-2rem;
+
+#quiz
+  margin-top: 1rem 
+
     
 	  	
 
